mroonga (2.04-1) unstable; urgency=low

  * New upstream release.

 -- Kouhei Sutou <kou@clear-code.com>  Fri, 29 Jun 2012 00:00:00 +0900

mroonga (2.03-1) unstable; urgency=low

  * New upstream release.

 -- Kouhei Sutou <kou@clear-code.com>  Tue, 29 May 2012 00:00:00 +0900

mroonga (2.02-1) unstable; urgency=low

  * New upstream release.
  * Require groonga >= 2.0.2.

 -- Kouhei Sutou <kou@clear-code.com>  Sun, 29 Apr 2012 00:00:00 +0900

mroonga (2.01-1) unstable; urgency=low

  * New upstream release.
  * Ensure plugin is uninstalled by closing all tables use mroonga.

 -- Kouhei Sutou <kou@clear-code.com>  Thu, 29 Mar 2012 00:00:00 +0900

mroonga (2.00-1) unstable; urgency=low

  * New upstream release.

 -- Kouhei Sutou <kou@clear-code.com>  Wed, 29 Feb 2012 00:00:00 +0900

mroonga (1.20-1) unstable; urgency=low

  * New upstream release.
  * Add mysql-server-mroonga-compatible package for "groonga" storage engine.

 -- Kouhei Sutou <kou@clear-code.com>  Sun, 29 Jan 2012 00:00:00 +0900

mroonga (1.11-1) unstable; urgency=low

  * New upstream release.
  * Change apparmor configuration file name:
    mysql-server-groonga -> mysql-server-mroonga

 -- Kouhei Sutou <kou@clear-code.com>  Thu, 29 Dec 2011 00:00:00 +0900

mroonga (1.10-1) unstable; urgency=low

  * New upstream release.

 -- Kouhei Sutou <kou@clear-code.com>  Sat, 29 Oct 2011 00:00:00 +0900

groonga-storage-engine (1.0.0-1) unstable; urgency=low

  * New upstream release.

 -- Kouhei Sutou <kou@clear-code.com>  Thu, 29 Sep 2011 00:00:00 +0900

groonga-storage-engine (0.9-1) unstable; urgency=low

  * New upstream release.

 -- Kouhei Sutou <kou@clear-code.com>  Mon, 29 Aug 2011 00:00:00 +0900

groonga-storage-engine (0.8-1) unstable; urgency=low

  * New upstream release.

 -- Kouhei Sutou <kou@clear-code.com>  Fri, 29 Jul 2011 00:00:00 +0900

groonga-storage-engine (0.7-1) unstable; urgency=low

  * New upstream release.

 -- Kouhei Sutou <kou@clear-code.com>  Wed, 29 Jun 2011 00:00:00 +0900
