@@ -6,6 +6,7 @@ prevver="$2"
 
 install_plugin() {
     cat <<EOS | mysql --defaults-file=/etc/mysql/debian.cnf || true
+DELETE IGNORE FROM mysql.plugin WHERE name = 'mroonga';
 INSTALL PLUGIN mroonga SONAME 'ha_mroonga.so';
 CREATE FUNCTION last_insert_grn_id RETURNS INTEGER soname 'ha_mroonga.so';
 EOS
