@@ -131,6 +131,7 @@ if [ "$1" = 2 ] ; then
            echo "  $command")
 fi
 sql="
+DELETE IGNORE FROM mysql.plugin WHERE name = 'mroonga';
 INSTALL PLUGIN mroonga SONAME 'ha_mroonga.so';
 CREATE FUNCTION last_insert_grn_id RETURNS INTEGER soname 'ha_mroonga.so';
 "
@@ -168,6 +169,8 @@ fi
 %changelog
 * Fri Jun 29 2012 Kouhei Sutou <kou@clear-code.com> - 2.04-0
 - new upstream release.
+- ensure deleting mroonga plugin before install.
+  Suggested by Kazuhiro Isobe. Thanks!!!
 
 * Tue May 29 2012 Kouhei Sutou <kou@clear-code.com> - 2.03-0
 - new upstream release.
